--- a/nodeLib.vcxproj
+++ b/nodeLib.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="nodeLib\connection.hpp" />
     <ClInclude Include="nodeLib\dataMessage.hpp" />
     <ClInclude Include="nodeLib\dataMessageAck.hpp" />
+    <ClInclude Include="nodeLib\logMessage.hpp" />
     <ClInclude Include="nodeLib\message.hpp" />
     <ClInclude Include="nodeLib\messageVisitor.hpp" />
     <ClInclude Include="nodeLib\node.hpp" />
@@ -44,13 +45,13 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140_xp</PlatformToolset>
+    <PlatformToolset>v141_xp</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140_xp</PlatformToolset>
+    <PlatformToolset>v141_xp</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -86,11 +87,11 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Boost\include\boost-1_63;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Boost\include\boost-1_64;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Boost\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\Boost\include\boost-1_63;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Boost\include\boost-1_64;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>C:\Boost\include\boost-1_63;$(IncludePath)</IncludePath>
