--- a/nodeLib.vcxproj
+++ b/nodeLib.vcxproj
@@ -41,7 +41,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>nodeLib</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
-    <ProjectName>NetworkLayer</ProjectName>
+    <ProjectName>MeshNetwork</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
