--- a/MeshNetwork.vcxproj
+++ b/MeshNetwork.vcxproj
@@ -19,22 +19,22 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="nodeLib\allMessages.hpp" />
-    <ClInclude Include="nodeLib\connection.hpp" />
-    <ClInclude Include="nodeLib\dataMessage.hpp" />
-    <ClInclude Include="nodeLib\dataMessageAck.hpp" />
-    <ClInclude Include="nodeLib\handshake.hpp" />
-    <ClInclude Include="nodeLib\handshakeReply.hpp" />
-    <ClInclude Include="nodeLib\logMessage.hpp" />
-    <ClInclude Include="nodeLib\message.hpp" />
-    <ClInclude Include="nodeLib\messageVisitor.hpp" />
-    <ClInclude Include="nodeLib\node.hpp" />
-    <ClInclude Include="nodeLib\routingMessage.hpp" />
-    <ClInclude Include="nodeLib\sendError.hpp" />
+    <ClInclude Include="src\allMessages.hpp" />
+    <ClInclude Include="src\connection.hpp" />
+    <ClInclude Include="src\dataMessage.hpp" />
+    <ClInclude Include="src\dataMessageAck.hpp" />
+    <ClInclude Include="src\handshake.hpp" />
+    <ClInclude Include="src\handshakeReply.hpp" />
+    <ClInclude Include="src\logMessage.hpp" />
+    <ClInclude Include="src\message.hpp" />
+    <ClInclude Include="src\messageVisitor.hpp" />
+    <ClInclude Include="src\node.hpp" />
+    <ClInclude Include="src\routingMessage.hpp" />
+    <ClInclude Include="src\sendError.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="nodeLib\connection.cpp" />
-    <ClCompile Include="nodeLib\node.cpp" />
+    <ClCompile Include="src\connection.cpp" />
+    <ClCompile Include="src\node.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{BC279B93-02D3-4847-9E0B-EA7E916D5E1A}</ProjectGuid>
