Small CMake update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
-cmake_minimum_required(VERSION 2.8.9)
+cmake_minimum_required(VERSION 3.5)
 
 project(MeshNetwork)
 
-set (CMAKE_CXX_STANDARD 14)
+find_package(Boost REQUIRED)
+include_directories(${Boost_INCLUDE_DIR})
+link_directories(${Boost_LIBRARY_DIR})
+
+set (CMAKE_CXX_STANDARD 17)
 
 include_directories(inc)
-include_directories(boost/inc)
+# include_directories(boost/inc)
 
 file(GLOB SOURCES "src/*.cpp")
 
